Fixed possible GUI freeze when Amarok was showing the dialog for installing mp3 support. Patch by Sascha Sommer <ssommer@suse.de>.

"The problem seems to be that EngineController::canDecode runs in a seperate
thread than the gui thread. Opening up a Kmessagebox there will prevent
amarok from handling all gui events and everything will freeze. I therefore
put the dialog into an extra function that will later get called from the
statusBar."

BUG: 147126


svn path=/branches/stable/extragear/multimedia/amarok/; revision=706845